Kasuta Stream#toList() Collectors-i asemel